--- a/styles.css
+++ b/styles.css
@@ -33,9 +33,29 @@ body, a:link, a:visited, a:active{
   border: 10px solid blue;
   border-radius: 10px;
 }
-.invader{
-  background-image: url(src/invader.png);
-  height: 20px;
-  width: 20px;
+.alien{
+
+}
+.invaderImg{
+  border: none;
+  height: 25px;
+  width: 25px;
+  position:relative;
+}
+.earth{
+  border: none;
+  margin-top: -60px;
+  margin-left: -80px;
+  height: 120px;
+  width: 160px;
   position:absolute;
+  top: 50%;
+  left: 50%;
+}
+.rocket{
+  border: 5px solid red;
+  border-radius: 2px;
+  /*position: fixed;*/
+ /* top: 30%;
+  left: 100px;*/
 }
